[package]
name = "nes"
version = "0.1.0"
authors = ["Ryan Norris <rynorris@gmail.com>"]

[dependencies]
base64 = "0.10"
md-5 = "0.8"
sdl2 = { version = "0.31", features = ["unsafe_textures"] }
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
serde_json = "1.0"
flate2 = "1.0"

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
