[package]
name = "nes"
version = "0.1.0"
authors = ["Ryan Norris <rynorris@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10"

[dev-dependencies]
md-5 = "0.8"
sdl2 = { version = "0.31", features = ["unsafe_textures"] }

